--- a/package.json
+++ b/package.json
@@ -1,9 +1,50 @@
 {
-  "name": "root",
-  "private": true,
-  "engines": {
-    "node": ">=10.0.0 <12.0.0",
-    "npm": ">=6.0.0"
+  "name": "regl-worldview",
+  "version": "0.17.0",
+  "description": "A reusable component for rendering 2D and 3D views using regl",
+  "license": "Apache-2.0",
+  "repository": "cruise-automation/webviz/tree/master/packages/regl-worldview",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
+  "browser": "dist/index.esm.js",
+  "unpkg": "dist/index.umd.js",
+  "files": [
+    "src",
+    "dist"
+  ],
+  "scripts": {
+    "build": "rollup -c",
+    "build:watch": "rollup -c --watch",
+    "clean": "rimraf dist",
+    "watch": "NODE_ENV=development npm run build:watch",
+    "lint": "eslint . && prettier -l '**/*.css' --ignore-path .eslintignore",
+    "lint:fix": "eslint . --fix && prettier --write '**/*.css' --ignore-path .eslintignore",
+    "test": "NODE_ENV=test jest --config jest/jest.config.js",
+    "storybook": "start-storybook -p 6006 -c stories",
+    "build-storybook": "build-storybook -c stories",
+    "flow": "flow",
+    "flow-typed-rebuild": "rm -rf flow-typed/ && flow-typed install && flow-typed install --rootDir packages/@cruise-automation/hooks && flow-typed install --rootDir packages/@cruise-automation/button && flow-typed install --rootDir packages/@cruise-automation/tooltip && flow-typed install --rootDir packages/regl-worldview",
+    "docs-dev": "NODE_OPTIONS='--max-old-space-size=4096' DEV_SERVER=true webpack-dev-server",
+    "docs-deploy": "cp -r docs/public __temp_deploy__ && rm __temp_deploy__/app/index.html && cp packages/webviz-core/public/index.html __temp_deploy__/app/index.html && echo 'webviz.io' > __temp_deploy__/CNAME && gh-pages -d __temp_deploy__ && rm -rf __temp_deploy__",
+    "screenshot": "NODE_ENV=development storycap http://localhost:6006 --serverTimeout 120000 --captureTimeout 35000 --disableCssAnimation --serverCmd \"yarn run storybook\" --viewport \"1001x745\" --parallel 4",
+    "screenshot-ci": "npm run screenshot -- --puppeteerLaunchConfig '{\"executablePath\": \"/usr/bin/google-chrome\", \"headless\": true, \"args\":[\"--use-gl=swiftshader\", \"--no-sandbox\",\"--disable-setuid-sandbox\", \"--disable-dev-shm-usage\", \"--headless\", \"--mute-audio\", \"--user-agent=PuppeteerTestingChrome/80.\"]}'",
+    "screenshot-local": "npm run screenshot -- --puppeteerLaunchConfig '{\"headless\": true, \"--args\":[\"--user-agent=PuppeteerTestingChrome/80.\"]}' --parallel 4",
+    "screenshot-local-debug": "npm run screenshot-local -- --parallel 1 --debug"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.3.1",
+    "@mapbox/tiny-sdf": "^1.1.1",
+    "distance-to-line-segment": "0.2.0",
+    "draco3d": "^1.4.1",
+    "earcut": "^2.1.3",
+    "gl-matrix": "^2.8.1",
+    "lodash": "^4.17.11",
+    "memoize-one": "^5.1.1",
+    "memoize-weak": "^1.0.2",
+    "normalize-wheel": "1.0.1",
+    "regl": "^1.3.1",
+    "reselect": "^3.0.1",
+    "shallowequal": "1.1.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.5",
@@ -17,6 +58,7 @@
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "@cruise-automation/hooks": "^0.0.1",
     "@dump247/storybook-state": "^1.5.2",
     "@mapbox/rehype-prism": "^0.3.0",
     "@mdx-js/loader": "^0.16.6",
@@ -29,8 +71,9 @@
     "autoprefixer": "^9.4.2",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "^23.4.2",
+    "babel-jest": "23.6.0",
     "babel-loader": "^8.0.4",
+    "babel-polyfill": "^6.26.0",
     "case-sensitive-paths-webpack-plugin": "^2.1.2",
     "css-loader": "^1.0.1",
     "enzyme": "^3.9.0",
@@ -48,12 +91,12 @@
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-react-hooks": "^1.6.0",
     "expect": "^24.9.0",
+    "fake-indexeddb": "2.0.4",
     "file-loader": "^4.0.0",
     "flow-bin": "0.110.0",
     "flow-copy-source": "^2.0.2",
     "flow-typed": "2.6.1",
     "gh-pages": "^2.0.1",
-    "gl-matrix": "^2.8.1",
     "history": "^4.7.2",
     "html-webpack-plugin": "^4.5.1",
     "http-server": "^0.12.3",
@@ -61,12 +104,10 @@
     "jest-canvas-mock": "^2.0.0-beta.1",
     "jest-diff": "24.9.0",
     "jest-puppeteer": "4.3.0",
-    "lerna": "^3.4.3",
     "lodash": "^4.17.11",
     "lz-string": "^1.4.4",
     "monaco-editor": "0.20.0",
     "monaco-editor-webpack-plugin": "1.9.0",
-    "nearley-loader": "^2.0.0",
     "polygon-generator": "^1.1.2",
     "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-loader": "^3.0.0",
@@ -119,36 +160,8 @@
     "webpack-dev-server": "^3.7.1",
     "worker-loader": "^2.0.0"
   },
-  "scripts": {
-    "bootstrap": "npm install && lerna bootstrap --hoist \"{react,react-dom}\"",
-    "install-ci": "npm ci && lerna bootstrap --hoist \"{react,react-dom}\"",
-    "build": "lerna run build && webpack",
-    "watch": "lerna run watch --parallel",
-    "clean": "lerna run clean",
-    "lerna": "lerna",
-    "lint": "eslint . --max-warnings=0 && prettier -l '**/*.css' --ignore-path .eslintignore",
-    "lint:fix": "eslint . --fix && prettier --write '**/*.css' --ignore-path .eslintignore",
-    "test": "NODE_ENV=test jest --config jest/jest.config.js",
-    "link": "lerna link --force-local",
-    "update-version": "lerna publish --skip-git --skip-npm --force-publish '*'",
-    "storybook": "start-storybook -p 6006 -c stories",
-    "build-storybook": "build-storybook -c stories",
-    "flow": "flow",
-    "flow-typed-rebuild": "rm -rf flow-typed/ && flow-typed install && flow-typed install --rootDir packages/@cruise-automation/hooks && flow-typed install --rootDir packages/@cruise-automation/button && flow-typed install --rootDir packages/@cruise-automation/tooltip && flow-typed install --rootDir packages/regl-worldview",
-    "docs-dev": "NODE_OPTIONS='--max-old-space-size=4096' DEV_SERVER=true webpack-dev-server",
-    "docs-deploy": "cp -r docs/public __temp_deploy__ && rm __temp_deploy__/app/index.html && cp packages/webviz-core/public/index.html __temp_deploy__/app/index.html && echo 'webviz.io' > __temp_deploy__/CNAME && gh-pages -d __temp_deploy__ && rm -rf __temp_deploy__",
-    "publish": "lerna run clean && lerna run build && lerna publish",
-    "build-static-webviz": "lerna run build && rm -rf __static_webviz__ && cp -r docs/public/app __static_webviz__ && rm __static_webviz__/index.html && cp packages/webviz-core/public/index.html __static_webviz__/index.html && sed -i -- 's/\\/dist\\/webvizCoreBundle.js/webvizCoreBundle.js/' __static_webviz__/index.html && NODE_ENV=production STATIC_WEBVIZ=true webpack",
-    "serve-static-webviz": "node_modules/http-server/bin/http-server __static_webviz__",
-    "screenshot": "NODE_ENV=development storycap http://localhost:6006 --serverTimeout 120000 --captureTimeout 35000 --disableCssAnimation --serverCmd \"yarn run storybook\" --viewport \"1001x745\" --parallel 4",
-    "screenshot-ci": "npm run screenshot -- --puppeteerLaunchConfig '{\"executablePath\": \"/usr/bin/google-chrome\", \"headless\": true, \"args\":[\"--use-gl=swiftshader\", \"--no-sandbox\",\"--disable-setuid-sandbox\", \"--disable-dev-shm-usage\", \"--headless\", \"--mute-audio\", \"--user-agent=PuppeteerTestingChrome/80.\"]}'",
-    "screenshot-proprietary-ci": "npm run screenshot-ci -- --parallel 4",
-    "screenshot-local": "npm run screenshot -- --puppeteerLaunchConfig '{\"headless\": true, \"--args\":[\"--user-agent=PuppeteerTestingChrome/80.\"]}' --parallel 4",
-    "screenshot-local-debug": "npm run screenshot-local -- --parallel 1 --debug",
-    "ci-commands-base": "npm run install-ci && NODE_ENV=production npm run build && packages/webviz-core/script/record-local-bag-video.js --help && npm run lint && npm run flow && npm test && integration-tests/install-ffmpeg-in-docker.sh && integration-tests/record-video-and-extract-screenshot.sh",
-    "ci-commands-for-cruise-open-source-repo": "npm run ci-commands-base && NODE_ENV=production npm run screenshot-ci",
-    "ci-commands-for-cruise-proprietary-repo": "npm run ci-commands-base && NODE_ENV=production npm run screenshot-proprietary-ci",
-    "ci": "npm run ci-commands-for-cruise-open-source-repo && reg-suit run --verbose",
-    "webviz-dev": "NODE_OPTIONS='--max-old-space-size=4096' DEV_SERVER=true WEBVIZ_DEV=true webpack-dev-server"
+  "peerDependencies": {
+    "react": "16.x",
+    "react-dom": "16.x"
   }
 }
