--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.2",
   "description": "A reusable component for rendering 2D and 3D views using regl",
   "license": "Apache-2.0",
-  "repository": "cruise-automation/webviz/tree/master/packages/regl-worldview",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/foxglove/regl-worldview.git"
+  },
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "browser": "dist/index.esm.js",
@@ -24,7 +27,7 @@
     "storybook": "start-storybook -p 6006 -c stories",
     "build-storybook": "build-storybook -c stories",
     "flow": "flow",
-    "flow-typed-rebuild": "rm -rf flow-typed/ && flow-typed install && flow-typed install --rootDir packages/@cruise-automation/hooks && flow-typed install --rootDir packages/@cruise-automation/button && flow-typed install --rootDir packages/@cruise-automation/tooltip && flow-typed install --rootDir packages/regl-worldview",
+    "flow-typed-rebuild": "rimraf flow-typed && flow-typed install",
     "docs-dev": "NODE_OPTIONS='--max-old-space-size=4096' DEV_SERVER=true webpack-dev-server",
     "docs-deploy": "cp -r docs/public __temp_deploy__ && rm __temp_deploy__/app/index.html && cp packages/webviz-core/public/index.html __temp_deploy__/app/index.html && echo 'webviz.io' > __temp_deploy__/CNAME && gh-pages -d __temp_deploy__ && rm -rf __temp_deploy__",
     "screenshot": "NODE_ENV=development storycap http://localhost:6006 --serverTimeout 120000 --captureTimeout 35000 --disableCssAnimation --serverCmd \"yarn run storybook\" --viewport \"1001x745\" --parallel 4",
