--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@babel/preset-react": "^7.0.0",
     "@cruise-automation/hooks": "^0.0.1",
     "@dump247/storybook-state": "^1.5.2",
+    "@foxglove/eslint-plugin": "^0.18.0",
     "@mapbox/rehype-prism": "^0.3.0",
     "@mdx-js/loader": "^0.16.6",
     "@rollup/plugin-wasm": "^5.1.2",
@@ -72,6 +73,9 @@
     "@storybook/addon-links": "^5.3.19",
     "@storybook/addons": "^5.3.19",
     "@storybook/react": "^5.3.19",
+    "@typescript-eslint/eslint-plugin": "^5.10.1",
+    "@typescript-eslint/experimental-utils": "^5.10.1",
+    "@typescript-eslint/parser": "^5.10.1",
     "autoprefixer": "^9.4.2",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
@@ -82,18 +86,20 @@
     "css-loader": "^1.0.1",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.15.2",
-    "eslint": "^5.9.0",
-    "eslint-config-prettier": "^3.3.0",
+    "eslint": "^8.8.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-config-problems": "^2.0.0",
     "eslint-import-resolver-webpack": "^0.10.1",
+    "eslint-plugin-es": "^4.1.0",
+    "eslint-plugin-filenames": "^1.3.2",
     "eslint-plugin-flowtype": "^3.2.0",
     "eslint-plugin-header": "^2.0.0",
-    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-import-order-alphabetical": "^0.0.2",
-    "eslint-plugin-jest": "^22.0.1",
-    "eslint-plugin-prettier": "^3.0.0",
-    "eslint-plugin-react": "^7.11.1",
-    "eslint-plugin-react-hooks": "^1.6.0",
+    "eslint-plugin-jest": "^26.0.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "expect": "^24.9.0",
     "fake-indexeddb": "2.0.4",
     "file-loader": "^4.0.0",
@@ -157,6 +163,7 @@
     "styled-components": "4.4.1",
     "terser-webpack-plugin": "3.0.1",
     "text-encoding": "^0.7.0",
+    "typescript": "^4.5.5",
     "unist-util-visit": "^1.4.0",
     "url-loader": "^1.1.2",
     "url-search-params": "^1.1.0",
