--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@cruise-automation/hooks": "^0.0.1",
     "@dump247/storybook-state": "^1.5.2",
     "@foxglove/eslint-plugin": "^0.18.0",
+    "@foxglove/tsconfig": "^1.1.0",
     "@mapbox/rehype-prism": "^0.3.0",
     "@mdx-js/loader": "^0.16.6",
     "@rollup/plugin-wasm": "^5.1.2",
@@ -73,6 +74,7 @@
     "@storybook/addon-links": "^5.3.19",
     "@storybook/addons": "^5.3.19",
     "@storybook/react": "^5.3.19",
+    "@types/lodash": "^4.14.178",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/experimental-utils": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
@@ -95,7 +97,6 @@
     "eslint-plugin-flowtype": "^3.2.0",
     "eslint-plugin-header": "^2.0.0",
     "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-import-order-alphabetical": "^0.0.2",
     "eslint-plugin-jest": "^26.0.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
@@ -167,6 +168,7 @@
     "unist-util-visit": "^1.4.0",
     "url-loader": "^1.1.2",
     "url-search-params": "^1.1.0",
+    "utility-types": "^3.10.0",
     "webpack-cli": "3.3.11",
     "webpack-dev-server": "^3.7.1",
     "worker-loader": "^2.0.0"
