--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@storybook/addons": "^5.3.19",
     "@storybook/react": "^5.3.19",
     "@types/lodash": "^4.14.178",
+    "@types/shallowequal": "^1.1.1",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/experimental-utils": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
@@ -122,7 +123,7 @@
     "polygon-generator": "^1.1.2",
     "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-loader": "^3.0.0",
-    "prettier": "1.16.0",
+    "prettier": "^2.5.1",
     "puppeteer": "7.0.1",
     "quickhull3d": "2.0.4",
     "raw-loader": "^0.5.1",
