--- a/package.json
+++ b/package.json
@@ -76,6 +76,9 @@
     "@storybook/react": "^5.3.19",
     "@types/lodash": "^4.14.178",
     "@types/shallowequal": "^1.1.1",
+    "@types/text-encoding": "^0.0.36",
+    "@types/url-search-params": "^1.1.0",
+    "@types/ws": "^8.2.2",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/experimental-utils": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
