--- a/package.json
+++ b/package.json
@@ -26,8 +26,6 @@
     "test": "NODE_ENV=test jest --config jest/jest.config.js",
     "storybook": "start-storybook -p 6006 -c stories",
     "build-storybook": "build-storybook -c stories",
-    "flow": "flow",
-    "flow-typed-rebuild": "rimraf flow-typed && flow-typed install",
     "docs-dev": "NODE_OPTIONS='--max-old-space-size=4096' DEV_SERVER=true webpack-dev-server",
     "docs-deploy": "cp -r docs/public __temp_deploy__ && rm __temp_deploy__/app/index.html && cp packages/webviz-core/public/index.html __temp_deploy__/app/index.html && echo 'webviz.io' > __temp_deploy__/CNAME && gh-pages -d __temp_deploy__ && rm -rf __temp_deploy__",
     "screenshot": "NODE_ENV=development storycap http://localhost:6006 --serverTimeout 120000 --captureTimeout 35000 --disableCssAnimation --serverCmd \"yarn run storybook\" --viewport \"1001x745\" --parallel 4",
@@ -41,7 +39,7 @@
     "distance-to-line-segment": "0.2.0",
     "draco3d": "^1.4.1",
     "earcut": "^2.1.3",
-    "gl-matrix": "^2.8.1",
+    "gl-matrix": "^3.4.3",
     "lodash": "^4.17.11",
     "memoize-one": "^5.1.1",
     "memoize-weak": "^1.0.2",
@@ -60,7 +58,6 @@
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-modules-commonjs": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.2.0",
-    "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "@cruise-automation/hooks": "^0.0.1",
     "@dump247/storybook-state": "^1.5.2",
@@ -74,7 +71,9 @@
     "@storybook/addon-links": "^5.3.19",
     "@storybook/addons": "^5.3.19",
     "@storybook/react": "^5.3.19",
+    "@types/jest": "^27.4.0",
     "@types/lodash": "^4.14.178",
+    "@types/normalize-wheel": "^1.0.0",
     "@types/shallowequal": "^1.1.1",
     "@types/text-encoding": "^0.0.36",
     "@types/url-search-params": "^1.1.0",
@@ -98,7 +97,6 @@
     "eslint-import-resolver-webpack": "^0.10.1",
     "eslint-plugin-es": "^4.1.0",
     "eslint-plugin-filenames": "^1.3.2",
-    "eslint-plugin-flowtype": "^3.2.0",
     "eslint-plugin-header": "^2.0.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jest": "^26.0.0",
@@ -108,17 +106,14 @@
     "expect": "^24.9.0",
     "fake-indexeddb": "2.0.4",
     "file-loader": "^4.0.0",
-    "flow-bin": "0.110.0",
-    "flow-copy-source": "^2.0.2",
-    "flow-typed": "2.6.1",
     "gh-pages": "^2.0.1",
     "history": "^4.7.2",
     "html-webpack-plugin": "^4.5.1",
     "http-server": "^0.12.3",
-    "jest": "^23.6.0",
-    "jest-canvas-mock": "^2.0.0-beta.1",
-    "jest-diff": "24.9.0",
-    "jest-puppeteer": "4.3.0",
+    "jest": "^27.4.7",
+    "jest-canvas-mock": "^2.3.1",
+    "jest-diff": "^27.4.6",
+    "jest-puppeteer": "^6.0.3",
     "lodash": "^4.17.11",
     "lz-string": "^1.4.4",
     "monaco-editor": "0.20.0",
