--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@foxglove/regl-worldview",
-  "version": "2.4.0",
+  "version": "2.5.0",
   "description": "A reusable component for rendering 2D and 3D views using regl",
   "license": "Apache-2.0",
   "repository": {
@@ -63,15 +63,15 @@
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "@cruise-automation/hooks": "^0.0.1",
-    "@dump247/storybook-state": "^1.5.2",
     "@mapbox/rehype-prism": "^0.3.0",
     "@mdx-js/loader": "^0.16.6",
     "@rollup/plugin-wasm": "^5.1.2",
-    "@storybook/addon-actions": "^5.3.19",
-    "@storybook/addon-knobs": "^5.3.19",
-    "@storybook/addon-links": "^5.3.19",
-    "@storybook/addons": "^5.3.19",
-    "@storybook/react": "^5.3.19",
+    "@storybook/addon-actions": "^6.5.10",
+    "@storybook/addon-essentials": "^6.5.10",
+    "@storybook/addon-knobs": "^6.4.0",
+    "@storybook/addon-links": "^6.5.10",
+    "@storybook/addons": "^6.5.10",
+    "@storybook/react": "^6.5.10",
     "autoprefixer": "^9.4.2",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
@@ -119,10 +119,10 @@
     "puppeteer": "7.0.1",
     "quickhull3d": "2.0.4",
     "raw-loader": "^0.5.1",
-    "react": "16.10.2",
+    "react": "^18.2.0",
     "react-container-dimensions": "^1.4.1",
     "react-copy-to-clipboard": "^5.0.1",
-    "react-dom": "16.10.2",
+    "react-dom": "^18.2.0",
     "react-hooks-testing-library": "^0.4.0",
     "react-hot-loader": "4.8.2",
     "react-live": "^1.12.0",
@@ -157,6 +157,7 @@
     "styled-components": "4.4.1",
     "terser-webpack-plugin": "3.0.1",
     "text-encoding": "^0.7.0",
+    "tinycolor2": "^1.4.2",
     "unist-util-visit": "^1.4.0",
     "url-loader": "^1.1.2",
     "url-search-params": "^1.1.0",
@@ -165,7 +166,7 @@
     "worker-loader": "^2.0.0"
   },
   "peerDependencies": {
-    "react": "16.x",
-    "react-dom": "16.x"
+    "react": "16.x || 17.x || 18.x",
+    "react-dom": "16.x || 17.x || 18.x"
   }
 }
